fix: fix miner address style inside text-truncate class

--- a/apps/block_scout_web/assets/css/components/_tile.scss
+++ b/apps/block_scout_web/assets/css/components/_tile.scss
@@ -186,8 +186,10 @@ $tile-body-a-color: #007bff;
 }
 
 .tile {
-  a[data-test="address_hash_link"]{
-    display: inline-block;
+  [data-test="chain_transaction"]{
+    a[data-test="address_hash_link"]{
+      display: inline-block;
+    }
   }
   span[data-address-hash] {
     color: $tile-body-a-color;
